logs/mmf-setup.log
Listing '.'...
Listing './bin'...
Compiling './bin/mmf_setup_bash.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/hglib'...
Listing './lib/python3.5/site-packages/mmf_setup'...
Listing './lib/python3.5/site-packages/mmf_setup/_data'...
Listing './lib/python3.5/site-packages/mmf_setup/_data/config_files'...
Listing './lib/python3.5/site-packages/mmf_setup/_data/config_files/smc'...
Listing './lib/python3.5/site-packages/mmf_setup/_data/hgthemes'...
Listing './lib/python3.5/site-packages/mmf_setup/_data/nbtemplates'...
Listing './lib/python3.5/site-packages/mmf_setup/_data/nbtemplates/_build'...
Listing './lib/python3.5/site-packages/mmf_setup/_data/nbthemes'...
Compiling './lib/python3.5/site-packages/mmf_setup/nbclean.py'...
***   File "./lib/python3.5/site-packages/mmf_setup/nbclean.py", line 368
    except hglib.error.CommandError, err:
                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mmf_setup/set_path'...
Listing './lib/python3.5/site-packages/mmf_setup-0.1.10.egg-info'...
Listing './lib/python3.5/site-packages/nbstripout-0.3.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_hglib-2.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
